<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <!-- Full background image -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/cartoon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/motivationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/be_positive_be_yourself"
        android:textColor="#444444"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/dancing_script"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <!-- Start button at bottom -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Startbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_button_bg"
        android:paddingHorizontal="20dp"
        android:text="@string/get_started"
        android:textColor="@color/white" android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/dancing_script"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>
